# reloj-calendario-solar

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out  angulos_solares.cc  gui.py  guifunc.py  reloj-solar-gui.py  reloj-solar-main.cc  reloj-solar.cc  requirements.txt
src/: datos_reloj.txt  gui.py  guifunc.py  reloj-solar-main.cc  reloj-solar.cc  reloj-solar.h
